--- a/css/style.css
+++ b/css/style.css
@@ -12,14 +12,129 @@ body {
     display: flex;
 }
 
-.debug main {
-    width: 100vw;
+main {
+	background-color: black;
+	width: 100vw;
 	height: 90vh;
-    background-color: aqua
+	justify-content: space-between;
+	align-items: center;
+}
+
+.settings {
+	width: 300px;
+	height: 50px;
+	position: absolute;
+	top: 0;
+	right: 0;
+}
+
+.main-2 {
+	width: 85%;
+	height: 85%;
+	flex-wrap: wrap;
+	align-content: space-between;
+	justify-content: space-between;
+}
+
+.people {
+	width: calc(100% / 5 - 5px);
+	height: calc(100% / 5 - 5px);
+	position: relative;
+}
+.people > .overlay {
+	min-width: 30%;
+	max-width: 80%;
+	color: white;
+	font-size: 20px;
+	white-space: nowrap;
+	background-color: rgba(0, 0, 0, 0.5);
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	padding: 0 5px;
+}
+
+.people img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+
+
+.left,
+.right {
+	color: white;
+	width: 5%;
+	height: 100%;
+	font-size: 24px;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+.left i {
+	color: grey;
+}
+
+.right i {
+	color: cyan;
+}
+
+
+/* .debug main {
+    width: 100vw;
+	height: 95vh;
+    background-color: aqua;
+    justify-content: space-between;
+	align-items: center;
+
 }
 
 .debug .main-2 {
     width: 85%;
     height: 85%;
     background-color: green;
+    align-content: space-between;
+	justify-content: space-between;
 }
+
+.debug .people {
+	width: calc(100% / 5 - 5px);
+	height: calc(100% / 5 - 5px);
+	background-color: purple;
+	border: 1px solid black;
+	position: relative;
+}
+
+.debug .people > .overlay {
+	min-width: 30%;
+	max-width: 80%;
+	color: white;
+	font-size: 20px;
+	white-space: nowrap;
+	background-color: rgba(0, 0, 0, 0.5);
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	padding: 0 5px;
+}
+
+.debug .people img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+} */
+
+/* .debug .settings {
+	width: 300px;
+	height: 50px;
+	background-color: green;
+	position: absolute;
+	top: 0;
+	right: 0;
+} */
