--- a/css/style.css
+++ b/css/style.css
@@ -21,11 +21,28 @@ main {
 }
 
 .settings {
-	width: 300px;
 	height: 50px;
 	position: absolute;
 	top: 0;
 	right: 0;
+    color: white;
+}
+
+.settings .view,
+.settings .expand {
+	align-items: center;
+	font-size: 20px;
+	background-image: linear-gradient(#636363, #1e1e1e);
+	border-radius: 5px;
+	padding: 20px;
+}
+
+.settings .expand {
+	margin: 0 20px 0 10px;
+}
+
+.settings .view span {
+	padding-left: 20px;
 }
 
 .main-2 {
@@ -62,6 +79,9 @@ main {
 	object-fit: cover;
 }
 
+.people i {
+    color: red;
+}
 
 
 .left,
@@ -82,6 +102,13 @@ main {
 .right i {
 	color: cyan;
 }
+
+.attivo {
+	border-style: inset;
+	border: 5px solid yellow;
+}
+
+
 
 
 /* .debug main {
@@ -130,11 +157,4 @@ main {
 	object-fit: cover;
 } */
 
-/* .debug .settings {
-	width: 300px;
-	height: 50px;
-	background-color: green;
-	position: absolute;
-	top: 0;
-	right: 0;
-} */
+
